# query-me-big

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
src/qmb/: __init__.py  cli.py  types.py
src/qmb/bigquery/: browser.py  client.py  executor.py  exporters.py  history.py  pager.py
src/qmb/dbt/: manifest.py  resolver.py  selector.py
src/qmb/sql/: loader.py
src/qmb/tui/: app.py
tests/: test_bigquery_flow.py  test_browser.py  test_cli.py  test_cli_import.py  test_dbt_resolver.py  test_exporters.py  test_history.py  test_manifest.py  test_tui_app.py
