[project]
name = "qmb"
version = "0.1.0"
description = "Query Me Big – a BigQuery CLI with Textual TUI, dbt support, and export"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "textual>=3.0",
    "rich>=13.0",
    "google-cloud-bigquery>=3.25",
    "pyarrow>=17.0",
    "pyperclip>=1.9",
]

[project.scripts]
qmb = "qmb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmb"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["qmb"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
]
